Se le modifico el codigo para mostrar un buscador en las tablas, de igual forma que las descripciones aparesca en español

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8050,7 +8050,7 @@ html.ie11 .bs-searchbox .form-control {
 
 /* CLASSSSS----------------------------------- */
   .dataTables_filter label{
-    display: none;
+    float: right;
   }
 
   .lotto{
