Se le modifico el css para que se deshabilitara el buscador en la pagina de reportes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8053,6 +8053,10 @@ html.ie11 .bs-searchbox .form-control {
     float: right;
   }
 
+  .index-tables .dataTables_filter label{
+    display: none;
+  }
+
   .lotto{
     margin-left: -15%;
     width: 150%;
